--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.adaptiveperformance.google.android": "5.1.5",
     "com.unity.burst": "1.8.24",
+    "com.unity.cinemachine": "3.1.4",
     "com.unity.collab-proxy": "2.9.2",
     "com.unity.ext.nunit": "2.0.5",
     "com.unity.feature.mobile": "1.0.0",
